@@ -1,3 +1,9 @@
+Sat Sep 21 23:53 2013 CDT
+    * lib/playlist.js, www/assets/js/player.js: Modify the server lead
+      function to have a 3 second lead-in period (to allow buffering).
+      Videos start at -3 seconds; the client is paused until the time
+      reaches 0 seconds.
+
 Sat Sep 21 02:21 2013 CDT
     * www/assets/js/ui.js, www/assets/js/ui.js, www/assets/js/util.js,
       www/channel.html, www/assets/css/ytsync.css: Add quick buttons for
